2009-05-05  Darin Fisher  <darin@chromium.org>

Reviewed by Darin Adler.

        https://bugs.webkit.org/show_bug.cgi?id=25570

        history.{back,forward,go} should always be dispatched asynchronously,
        even when the history navigation would just result in scrolling the
        page.  This matches the behavior of other browsers like IE and FF.

        Test: fast/history/back-forward-is-asynchronous.html

        * loader/FrameLoader.cpp:
        (WebCore::FrameLoader::scheduleHistoryNavigation):



Canonical link: https://commits.webkit.org/35297@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@43274 268f45cc-cd09-0410-ab3c-d52691b4dbfc